Simplify table column management with improved SQL operations.
- Replaced `insertTableColumns` with `saveColumnOrderToRow` and `restoreColumnOrderFromRow` for clearer and more efficient column handling.
- Refactored SQL table creation to dynamically adapt to column structure.
- Enhanced logging for better debugging of column operations.
- Integrated `modena.css` for improved GUI theming.
- Removed redundant and commented-out code for cleaner implementation.